refactor: Use HTTPS for repositories
Co-authored-by: Moderne <team@moderne.io>

--- a/pom.xml
+++ b/pom.xml
@@ -14,7 +14,7 @@
 	<distributionManagement>
 		<repository>
 			<id>artifact-repository</id>
-			<url>http://10.0.75.1:8082/repository/maven-releases/</url>
+			<url>https://10.0.75.1:8082/repository/maven-releases/</url>
 		</repository>
 	</distributionManagement>
 
